fix: adaptive on iphone

--- a/src/assets/style/blocks/currentGoods.scss
+++ b/src/assets/style/blocks/currentGoods.scss
@@ -392,6 +392,7 @@ button .ivu-icon {
   .img-previews {
     display: flex;
     justify-content: center;
+    width: 70%;
   }
 
   .img-block {
